- fixed IOC-280 - ResolveAll should respect services and fail hard when a component can't be resolved
- implemented IOC-279 - WindsorContainer constructor taking string should accept not only file path but also other supported locations, like UNC, config section and embedded resource
- fixed IOC-278 - Optional Dependencies should also be satisfied from ILazyComponentLoaders if possible
- implemented IOC-277 - Add ability for components activated in a custom way to opt out of container lifetime management
- implemented IOC-275 - Exception message thrown when dependencies are missing is not always very clear and should be improved
- fixed IOC-273 - Auto register PerWebRequestLifestyleModule using PreApplicationStartMethodAttribute at runtime
- EventWiringFacility, FactorySupportFacility and RemotingFacility are extracted to their own assemblies
- implemented IOC-271 - Support open generic components where implementing class has more generic parameters than the service but the missing ones can be somehow inferred
- implemented IOC-270 - Add OnDestroy method, symertical to OnCreate 
- implemented IOC-268 - Hook that allows for filtering handlers during ResolveAll 
- fixed IOC-267 - Register() on a System.ValueType (like an Int32 or an Enum) instance should throw an exception
- fixed IOC-265 - In certain cases of cyclic dependencies debugger view times out because of stack overflow in MismatchedLifestyleDependencyViewBuilder 
- implemented IOC-263 - Add new debugger diagnostics - tracked objects
- fixed IOC-262 objects created via UsingFactoryMethod are always tracked, even if they could safely not be
- fixed 	IOC-260 - Generic Typed Factories no longer working in trunk
- implemented IOC-257 - Same as in code, specifying type for facility in XML should be enough - Id should be optional
- implemented IOC-256 - Same as in code, specifying type for component in XML should be enough - Id should be optional