@@ -1,4 +1,4 @@
-﻿// Copyright 2004-2010 Castle Project - http://www.castleproject.org/
+// Copyright 2004-2011 Castle Project - http://www.castleproject.org/
 // 
 // Licensed under the Apache License, Version 2.0 (the "License");
 // you may not use this file except in compliance with the License.
@@ -12,17 +12,24 @@
 // See the License for the specific language governing permissions and
 // limitations under the License.
 
-namespace Castle.Windsor.Tests.ClassComponents
+#if !DOTNET35
+namespace CastleTests.Components
 {
 	using System;
 
-	public class DisposableFoo : IDisposable
+	public class UsesLazy<T>
 	{
-		public static int DisposedCount;
+		private readonly Lazy<T> lazy;
 
-		public void Dispose()
+		public UsesLazy(Lazy<T> lazy)
 		{
-			DisposedCount++;
+			this.lazy = lazy;
+		}
+
+		public Lazy<T> Lazy
+		{
+			get { return lazy; }
 		}
 	}
 }
+#endif
