@@ -24,6 +24,7 @@ namespace Castle.Lifestyle
 	using Castle.Windsor.Tests.ClassComponents;
 
 	using CastleTests;
+	using CastleTests.Components;
 
 	using NUnit.Framework;
 
@@ -39,7 +40,7 @@ namespace Castle.Lifestyle
 		[Test]
 		public void Ending_scope_releases_component()
 		{
-			DisposableFoo.DisposedCount = 0;
+			DisposableFoo.ResetDisposedCount();
 
 			Container.Register(Component.For<DisposableFoo>().LifeStyle.Scoped());
 
@@ -107,7 +108,7 @@ namespace Castle.Lifestyle
 		[Test]
 		public void Scoped_component_is_bound_to_the_innermost_scope()
 		{
-			DisposableFoo.DisposedCount = 0;
+			DisposableFoo.ResetDisposedCount();
 
 			Container.Register(Component.For<DisposableFoo>().LifeStyle.Scoped());
 
@@ -127,7 +128,7 @@ namespace Castle.Lifestyle
 		public void Scoped_component_is_not_released_by_call_to_container_Release()
 		{
 			DisposableFoo foo;
-			DisposableFoo.DisposedCount = 0;
+			DisposableFoo.ResetDisposedCount();
 
 			Container.Register(Component.For<DisposableFoo>().LifeStyle.Scoped());
 
@@ -143,7 +144,7 @@ namespace Castle.Lifestyle
 		public void Scoped_component_is_not_tracked_by_the_release_policy()
 		{
 			DisposableFoo foo;
-			DisposableFoo.DisposedCount = 0;
+			DisposableFoo.ResetDisposedCount();
 
 			Container.Register(Component.For<DisposableFoo>().LifeStyle.Scoped());
 
